Test batch size 1 ProtoNet

--- a/alternative_exp.ipynb
+++ b/alternative_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "48313b94",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets, transforms\n",
     "import torch.optim as optim\n",
-    "\n",
+    " \n",
     "\n",
     "from training.train import train_model, train_protonet\n",
     "from utils.transforms import get_transforms\n",
@@ -51,7 +51,7 @@
    ],
    "source": [
     "# Hyperparameters\n",
-    "batch_size = 64\n",
+    "batch_size = 1\n",
     "num_epochs = 100\n",
     "lr = 0.0005\n",
     "num_classes = 10\n",
@@ -138,8 +138,8 @@
     "cifar10_train_imgs, cifar10_train_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=True, img_size=32)\n",
     "cifar10_test_imgs, cifar10_test_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=False, img_size=32)\n",
     "\n",
-    "protonet_train_dataset = FewShotDataset(data=cifar10_train_imgs, labels=cifar10_train_labels, n_classes=7, n_supp=5, n_queries=15, transform=train_transform)\n",
-    "protonet_test_dataset = FewShotDataset(data=cifar10_train_imgs, labels=cifar10_test_labels, n_classes=7, n_supp=5, n_queries=15, transform=train_transform)\n",
+    "protonet_train_dataset = FewShotDataset(data=cifar10_train_imgs, labels=cifar10_train_labels, n_classes=3, n_supp=3, n_queries=10, transform=train_transform)\n",
+    "protonet_test_dataset = FewShotDataset(data=cifar10_train_imgs, labels=cifar10_test_labels, n_classes=3, n_supp=3, n_queries=10, transform=train_transform)\n",
     "\n",
     "protonet_train_loader = DataLoader(protonet_train_dataset, batch_size=batch_size, shuffle=False, num_workers=0)\n",
     "protonet_test_loader = DataLoader(protonet_test_dataset, batch_size=batch_size, shuffle=False, num_workers=0)"
@@ -356,8 +356,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Training baseline: FilmNet50_SGC ===\n",
-      "[FilmNet50_SGC][Epoch 1/100] train_loss=2.1891, train_acc=0.2226  val_loss=2.4291, val_acc=0.1000  (best=0.1000)  epoch_time=0h02m08s, ETA=3h32m08s\n"
+      "=== Training baseline: ProtoNet ===\n",
+      "[ProtoNet][Epoch 1/100] train_loss=5.6362, train_acc=0.1040  val_loss=1.3491, val_acc=0.0930  (best=0.0930)  epoch_time=0h01m00s, ETA=1h39m44s\n",
+      "[ProtoNet][Epoch 2/100] train_loss=1.0462, train_acc=0.1064  val_loss=0.5380, val_acc=0.0916  (best=0.0930)  epoch_time=0h00m59s, ETA=1h36m41s\n"
      ]
     }
    ],
@@ -373,8 +374,8 @@
     "#\t\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
     "\n",
-    "#train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
-    "#\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
+    "train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
+    "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
     "train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=train_loader, test_loader=test_loader,\n",
     "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
