--- a/alternative_exp.ipynb
+++ b/alternative_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "48313b94",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,14 @@
     " \n",
     "\n",
     "from training.train import train_model, train_protonet\n",
-    "from utils.transforms import get_transforms\n",
+    "from utils.transforms import get_transforms, get_imagenet_transforms\n",
     "from utils.evaluation import evaluate_model\n",
     "from models.ResNet_SC import ModifiedResNet18\n",
     "from models.ResNet import ResNet18, ResNet50\n",
     "from models.ProtoNet import ProtoNet18\n",
     "from models.FILM import FiLMNet18_SGC, FiLMNet50_SGC\n",
-    "from datasets.Image_Classification import ImgClassificationDataset, CIFAR10C, FewShotDataset, load_cifar10"
+    "from datasets.Image_Classification import ImgClassificationDataset, CIFAR10C, FewShotDataset, load_cifar10\n",
+    "# import ImageNet dataloader\n"
    ]
   },
   {
@@ -101,6 +102,9 @@
     "train_transform = get_transforms(split='train')\n",
     "test_transform = get_transforms(split='test')\n",
     "\n",
+    "imagenet_train_transform = get_imagenet_transforms(split='train')\n",
+    "imagenet_test_transform = get_imagenet_transforms(split='test')\n",
+    "\n",
     "\n",
     "\n",
     "train_dataset = datasets.CIFAR10(\n",
@@ -120,21 +124,41 @@
     "train_loader = DataLoader(\n",
     "\ttrain_dataset,\n",
     "\tbatch_size=batch_size,\n",
-    "\tshuffle=True,      # shuffle training data each epoch\n",
-    "\tnum_workers=2      # adjust number of workers to your machine\n",
+    "\tshuffle=True,    \n",
+    "\tnum_workers=2     \n",
     ")\n",
     "\n",
     "test_loader = DataLoader(\n",
     "\ttest_dataset,\n",
     "\tbatch_size=batch_size,\n",
-    "\tshuffle=False,     # no need to shuffle test/validation data\n",
+    "\tshuffle=False,  \n",
     "\tnum_workers=2\n",
     ")\n",
     "\n",
-    "#############\n",
-    "# Protonet dataset\n",
-    "#############\n",
+    "# load ImageNet\n",
+    "imagenet_train_dataset = datasets.ImageFolder(\n",
+    "\troot=\"./data/imagenet/imagenet/train\",\n",
+    "    transform=imagenet_train_transform,\n",
+    ")\n",
     "\n",
+    "imagenet_test_dataset = datasets.ImageFolder(\n",
+    "\troot=\"./data/imagenet/imagenet/train\",\n",
+    "    transform=imagenet_test_transform\n",
+    ")\n",
+    "\n",
+    "imagenet_train_loader = DataLoader(\n",
+    "\timagenet_train_dataset,\n",
+    "\tbatch_size=128,\n",
+    "\tshuffle=True,         \n",
+    ")\n",
+    "\n",
+    "imagenet_test_loader = DataLoader(\n",
+    "\timagenet_test_dataset,\n",
+    "\tbatch_size=128,\n",
+    "\tshuffle=False,     \n",
+    ")\n",
+    "\n",
+    "# cifar10 loader for few-shot learning\n",
     "cifar10_train_imgs, cifar10_train_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=True, img_size=32)\n",
     "cifar10_test_imgs, cifar10_test_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=False, img_size=32)\n",
     "\n",
@@ -155,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7c25fa8d",
    "metadata": {},
    "outputs": [
@@ -293,7 +317,7 @@
     "model_resnet50 = ResNet50(num_classes=10).to(device)\n",
     "model_filmnet18_sgc = FiLMNet18_SGC(c_dim=512, num_classes=num_classes).to(device)\n",
     "model_filmnet50_sgc = FiLMNet50_SGC(c_dim=512, num_classes=num_classes).to(device)\n",
-    "model_protonet18 = ProtoNet18(ResNet18, embedding_dim=512, num_classes=num_classes).to(device)\n",
+    "model_protonet18 = ProtoNet18(ResNet18, embedding_dim=512, num_classes=1000).to(device)\n",
     "print(model_resnet18)\n",
     "\n"
    ]
@@ -356,9 +380,151 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Training baseline: ProtoNet ===\n",
-      "[ProtoNet][Epoch 1/100] train_loss=5.6362, train_acc=0.1040  val_loss=1.3491, val_acc=0.0930  (best=0.0930)  epoch_time=0h01m00s, ETA=1h39m44s\n",
-      "[ProtoNet][Epoch 2/100] train_loss=1.0462, train_acc=0.1064  val_loss=0.5380, val_acc=0.0916  (best=0.0930)  epoch_time=0h00m59s, ETA=1h36m41s\n"
+      "=== Training baseline: FilmNet50_SGC ===\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n",
+      "torch.Size([128, 3, 224, 224]) torch.Size([128])\n"
      ]
     }
    ],
@@ -374,10 +540,10 @@
     "#\t\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
     "\n",
-    "train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
-    "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
+    "#train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
+    "#\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
-    "train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=train_loader, test_loader=test_loader,\n",
+    "train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=imagenet_train_loader, test_loader=imagenet_test_loader,\n",
     "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n"
    ]
