Implemented Tiny-ImageNet/C training and testing

--- a/baseline_exp_.ipynb
+++ b/baseline_exp_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "48313b94",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "from utils.transforms import get_transforms\n",
     "from utils.evaluation import evaluate_model\n",
     "from models.ResNet_SC import ModifiedResNet18\n",
-    "from datasets.Image_Classification import ImgClassificationDataset, CIFAR10C"
+    "from dataset.Image_Classification import ImgClassificationDataset, CIFAR10C"
    ]
   },
   {
