--- a/alternative_exp.ipynb
+++ b/alternative_exp.ipynb
@@ -5,25 +5,39 @@
    "execution_count": 1,
    "id": "48313b94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/codiri/installs/miniconda3/envs/SCNN/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader\n",
+    "from datasets import load_dataset\n",
     "from torchvision import datasets, transforms\n",
     "import torch.optim as optim\n",
-    " \n",
+    "\n",
+    "\n",
+    "ds = load_dataset(\"zh-plus/tiny-imagenet\")\n",
+    "\n",
     "\n",
     "from training.train import train_model, train_protonet\n",
-    "from utils.transforms import get_transforms, get_imagenet_transforms\n",
+    "from utils.transforms import get_transforms, get_imagenet_transforms, get_tiny_imagenet_transforms\n",
     "from utils.evaluation import evaluate_model\n",
     "from models.ResNet_SC import ModifiedResNet18\n",
     "from models.ResNet import ResNet18, ResNet50\n",
     "from models.ProtoNet import ProtoNet18\n",
     "from models.FILM import FiLMNet18_SGC, FiLMNet50_SGC\n",
-    "from datasets.Image_Classification import ImgClassificationDataset, CIFAR10C, FewShotDataset, load_cifar10\n",
+    "from dataset.Image_Classification import ImgClassificationDataset, ImgClassificationDatasetHF, CIFAR10C, FewShotDataset, ImageNetC, load_cifar10\n",
+    "\n",
     "# import ImageNet dataloader\n"
    ]
   },
@@ -94,10 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd0121d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x301473230>\n"
+     ]
+    }
+   ],
    "source": [
     "train_transform = get_transforms(split='train')\n",
     "test_transform = get_transforms(split='test')\n",
@@ -105,7 +127,8 @@
     "imagenet_train_transform = get_imagenet_transforms(split='train')\n",
     "imagenet_test_transform = get_imagenet_transforms(split='test')\n",
     "\n",
-    "\n",
+    "t_imagenet_train_transform = get_tiny_imagenet_transforms(split='train')\n",
+    "t_imagenet_test_transform = get_tiny_imagenet_transforms(split='test')\n",
     "\n",
     "train_dataset = datasets.CIFAR10(\n",
     "\troot=\"./data\",          \n",
@@ -159,6 +182,49 @@
     "\tshuffle=False,     \n",
     ")\n",
     "\"\"\"\n",
+    "\n",
+    "# load tiny-imagenet\n",
+    "t_imagenet_data = load_dataset(\"zh-plus/tiny-imagenet\")\n",
+    "\n",
+    "train_t_imagenet_data = t_imagenet_data[\"train\"]\n",
+    "val_t_imagenet_data = t_imagenet_data[\"valid\"]\n",
+    "print(train_t_imagenet_data['image'][0])\n",
+    "\n",
+    "train_t_imagenet_ds = ImgClassificationDataset(\n",
+    "    data = train_t_imagenet_data[\"image\"],\n",
+    "    labels = train_t_imagenet_data[\"label\"],\n",
+    "    transform = t_imagenet_train_transform\n",
+    ")\n",
+    "\n",
+    "val_t_imagenet_ds = ImgClassificationDataset(\n",
+    "    data = val_t_imagenet_data[\"image\"],\n",
+    "    labels = val_t_imagenet_data[\"label\"],\n",
+    "    transform = t_imagenet_test_transform\n",
+    ")\n",
+    "\n",
+    "train_t_imagenet_loader = DataLoader(\n",
+    "\ttrain_t_imagenet_ds,\n",
+    "\tbatch_size=32,\n",
+    "\tshuffle=True,\n",
+    "\tnum_workers=2\n",
+    ")\n",
+    "val_t_imagenet_loader = DataLoader(\n",
+    "\tval_t_imagenet_ds,\n",
+    "\tbatch_size=32,\n",
+    "\tshuffle=False,\n",
+    "\tnum_workers=2\n",
+    ")\n",
+    "\n",
+    "# Load Tiny-ImageNet-C\n",
+    "t_imagenet_dataset_c = ImageNetC(\n",
+    "\troot_dir=\"./data/imagenet/Tiny-ImageNet-C\",)\n",
+    "\n",
+    "t_imagenet_loader_c = DataLoader(\n",
+    "\tt_imagenet_dataset_c,\n",
+    "\tbatch_size=32,\n",
+    "\tshuffle=True,\n",
+    "\tnum_workers=2\n",
+    ")\n",
     "\n",
     "# cifar10 loader for few-shot learning\n",
     "cifar10_train_imgs, cifar10_train_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=True, img_size=32)\n",
@@ -373,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7acab78b",
    "metadata": {},
    "outputs": [
@@ -382,37 +448,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Training baseline: ProtoNet ===\n",
-      "[ProtoNet][Epoch 1/100] train_loss=14.3691, train_acc=0.2918  val_loss=11.8576, val_acc=0.1192  (best=0.1192)  epoch_time=0h00m15s, ETA=0h25m42s\n",
-      "[ProtoNet][Epoch 2/100] train_loss=5.8056, train_acc=0.3280  val_loss=4.6497, val_acc=0.1255  (best=0.1255)  epoch_time=0h00m11s, ETA=0h19m32s\n",
-      "[ProtoNet][Epoch 3/100] train_loss=2.7225, train_acc=0.3812  val_loss=3.3113, val_acc=0.1247  (best=0.1255)  epoch_time=0h00m11s, ETA=0h19m23s\n",
-      "[ProtoNet][Epoch 4/100] train_loss=1.7756, train_acc=0.4461  val_loss=2.7137, val_acc=0.1289  (best=0.1289)  epoch_time=0h00m11s, ETA=0h19m06s\n",
-      "[ProtoNet][Epoch 5/100] train_loss=1.4892, train_acc=0.4921  val_loss=2.5303, val_acc=0.1267  (best=0.1289)  epoch_time=0h00m12s, ETA=0h19m01s\n",
-      "[ProtoNet][Epoch 6/100] train_loss=1.3395, train_acc=0.5292  val_loss=2.4469, val_acc=0.1279  (best=0.1289)  epoch_time=0h00m12s, ETA=0h18m51s\n",
-      "[ProtoNet][Epoch 7/100] train_loss=1.2133, train_acc=0.5711  val_loss=2.4338, val_acc=0.1297  (best=0.1297)  epoch_time=0h00m11s, ETA=0h18m31s\n",
-      "[ProtoNet][Epoch 8/100] train_loss=1.1172, train_acc=0.6043  val_loss=2.4367, val_acc=0.1301  (best=0.1301)  epoch_time=0h00m12s, ETA=0h18m26s\n",
-      "[ProtoNet][Epoch 9/100] train_loss=1.0462, train_acc=0.6296  val_loss=2.4473, val_acc=0.1253  (best=0.1301)  epoch_time=0h00m12s, ETA=0h18m15s\n",
-      "[ProtoNet][Epoch 10/100] train_loss=0.9628, train_acc=0.6573  val_loss=2.4541, val_acc=0.1251  (best=0.1301)  epoch_time=0h00m12s, ETA=0h18m11s\n",
-      "[ProtoNet][Epoch 11/100] train_loss=0.8927, train_acc=0.6846  val_loss=2.4548, val_acc=0.1269  (best=0.1301)  epoch_time=0h00m12s, ETA=0h18m00s\n",
-      "[ProtoNet][Epoch 12/100] train_loss=0.7879, train_acc=0.7226  val_loss=2.4496, val_acc=0.1259  (best=0.1301)  epoch_time=0h00m12s, ETA=0h17m39s\n",
-      "[ProtoNet][Epoch 13/100] train_loss=0.7262, train_acc=0.7459  val_loss=2.4963, val_acc=0.1247  (best=0.1301)  epoch_time=0h00m12s, ETA=0h17m29s\n",
-      "[ProtoNet][Epoch 14/100] train_loss=0.6465, train_acc=0.7772  val_loss=2.5390, val_acc=0.1252  (best=0.1301)  epoch_time=0h00m12s, ETA=0h17m57s\n",
-      "[ProtoNet][Epoch 15/100] train_loss=0.5727, train_acc=0.8037  val_loss=2.5474, val_acc=0.1242  (best=0.1301)  epoch_time=0h00m12s, ETA=0h17m20s\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      2\u001b[39m best_val_acc = {name: \u001b[32m0.0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m baseline_dict.keys()}\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#for name, (model, optim) in baseline_dict.items():\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#\ttrain_model(name=name, model=model, optimizer=optim, train_loader=train_loader, test_loader=test_loader, \u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#\t\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mtrain_protonet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mProtoNet\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel_protonet18\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m=\u001b[49m\u001b[43moptim_protonet18\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprotonet_train_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_loader\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprotonet_test_loader\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m\t\t\t\u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m#train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=train_loader, test_loader=test_loader,\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/University/Edinburgh/Lightweight-SCNNs/training/train.py:168\u001b[39m, in \u001b[36mtrain_protonet\u001b[39m\u001b[34m(name, model, optimizer, train_loader, test_loader, criterion, device, num_epochs)\u001b[39m\n\u001b[32m    163\u001b[39m loss = criterion(outputs, query_labels)\n\u001b[32m    165\u001b[39m \u001b[38;5;66;03m#print(f\"[DEBUG] logits.shape = {outputs.shape}\")\u001b[39;00m\n\u001b[32m    166\u001b[39m \u001b[38;5;66;03m#print(f\"[DEBUG] query_labels.min() = {query_labels.min().item()}, max() = {query_labels.max().item()}\")\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m168\u001b[39m \u001b[43mloss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    169\u001b[39m optimizer.step()\n\u001b[32m    171\u001b[39m running_loss += loss.item() * query_imgs.size(\u001b[32m0\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/installs/miniconda3/envs/SCNN/lib/python3.12/site-packages/torch/_tensor.py:648\u001b[39m, in \u001b[36mTensor.backward\u001b[39m\u001b[34m(self, gradient, retain_graph, create_graph, inputs)\u001b[39m\n\u001b[32m    638\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    639\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[32m    640\u001b[39m         Tensor.backward,\n\u001b[32m    641\u001b[39m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[32m   (...)\u001b[39m\u001b[32m    646\u001b[39m         inputs=inputs,\n\u001b[32m    647\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m648\u001b[39m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mautograd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    649\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m=\u001b[49m\u001b[43minputs\u001b[49m\n\u001b[32m    650\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/installs/miniconda3/envs/SCNN/lib/python3.12/site-packages/torch/autograd/__init__.py:353\u001b[39m, in \u001b[36mbackward\u001b[39m\u001b[34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[39m\n\u001b[32m    348\u001b[39m     retain_graph = create_graph\n\u001b[32m    350\u001b[39m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[32m    351\u001b[39m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[32m    352\u001b[39m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m353\u001b[39m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    354\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    355\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    356\u001b[39m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    357\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    358\u001b[39m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    359\u001b[39m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    360\u001b[39m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    361\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/installs/miniconda3/envs/SCNN/lib/python3.12/site-packages/torch/autograd/graph.py:824\u001b[39m, in \u001b[36m_engine_run_backward\u001b[39m\u001b[34m(t_outputs, *args, **kwargs)\u001b[39m\n\u001b[32m    822\u001b[39m     unregister_hooks = _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[32m    823\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m824\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_execution_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[32m    825\u001b[39m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\n\u001b[32m    826\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[32m    827\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    828\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "=== Training baseline: FilmNet50_SGC ===\n",
+      "\n",
+      "Batch idx: 118 of 3125\r"
      ]
     }
    ],
@@ -428,11 +466,11 @@
     "#\t\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
     "\n",
-    "train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
-    "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
-    "\n",
-    "#train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=train_loader, test_loader=test_loader,\n",
+    "#train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
     "#\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
+    "\n",
+    "train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=train_t_imagenet_loader, test_loader=val_t_imagenet_loader,\n",
+    "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n"
    ]
   },
