ProtoNet training on Tiny IN

--- a/alternative_exp.ipynb
+++ b/alternative_exp.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dd0121d2",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x301473230>\n"
+      "Column([<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D921B80>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A0AA0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A1970>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A1A30>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A1AF0>])\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
     "\n",
     "train_t_imagenet_data = t_imagenet_data[\"train\"]\n",
     "val_t_imagenet_data = t_imagenet_data[\"valid\"]\n",
-    "print(train_t_imagenet_data['image'][0])\n",
+    "print(train_t_imagenet_data['image'])\n",
     "\n",
     "train_t_imagenet_ds = ImgClassificationDataset(\n",
     "    data = train_t_imagenet_data[\"image\"],\n",
@@ -230,8 +230,8 @@
     "cifar10_train_imgs, cifar10_train_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=True, img_size=32)\n",
     "cifar10_test_imgs, cifar10_test_labels = load_cifar10(data_dir=\"./data/cifar-10-batches-py\", train=False, img_size=32)\n",
     "\n",
-    "protonet_train_dataset = FewShotDataset(data=cifar10_train_imgs, labels=cifar10_train_labels, n_classes=5, n_supp=5, n_queries=10, transform=train_transform)\n",
-    "protonet_test_dataset = FewShotDataset(data=cifar10_train_imgs, labels=cifar10_test_labels, n_classes=5, n_supp=5, n_queries=10, transform=train_transform)\n",
+    "protonet_train_dataset = FewShotDataset(data=train_t_imagenet_data[\"image\"], labels=train_t_imagenet_data[\"label\"], n_classes=5, n_supp=5, n_queries=10, transform=train_transform)\n",
+    "protonet_test_dataset = FewShotDataset(data=val_t_imagenet_data[\"image\"], labels=val_t_imagenet_data[\"label\"], n_classes=5, n_supp=5, n_queries=10, transform=train_transform)\n",
     "\n",
     "protonet_train_loader = DataLoader(protonet_train_dataset, batch_size=batch_size, shuffle=False, num_workers=0)\n",
     "protonet_test_loader = DataLoader(protonet_test_dataset, batch_size=batch_size, shuffle=False, num_workers=0)"
@@ -450,7 +450,7 @@
       "\n",
       "=== Training baseline: FilmNet50_SGC ===\n",
       "\n",
-      "Batch idx: 118 of 3125\r"
+      "Batch idx: 8 of 3125\r"
      ]
     }
    ],
