ProtoNet training on Tiny IN fixed '

--- a/alternative_exp.ipynb
+++ b/alternative_exp.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dd0121d2",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column([<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D921B80>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A0AA0>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A1970>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A1A30>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x12D9A1AF0>])\n"
+      "Column([<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x168621610>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x16869B620>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x1686A5370>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x1686A5430>, <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=64x64 at 0x1686A53D0>])\n"
      ]
     }
    ],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7c25fa8d",
    "metadata": {},
    "outputs": [
@@ -386,6 +386,7 @@
     "model_filmnet18_sgc = FiLMNet18_SGC(c_dim=512, num_classes=num_classes).to(device)\n",
     "model_filmnet50_sgc = FiLMNet50_SGC(c_dim=512, num_classes=1000).to(device)\n",
     "model_protonet18 = ProtoNet18(ResNet18, embedding_dim=512, num_classes=num_classes).to(device)\n",
+    "model_protonet50 = ProtoNet18(ResNet50, embedding_dim=2048, num_classes=num_classes).to(device)\n",
     "print(model_resnet18)\n",
     "\n"
    ]
@@ -448,9 +449,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Training baseline: FilmNet50_SGC ===\n",
-      "\n",
-      "Batch idx: 8 of 3125\r"
+      "=== Training baseline: ProtoNet ===\n",
+      "[ProtoNet][Epoch 1/100] train_loss=9.3954, train_acc=0.2074  val_loss=10.1773, val_acc=0.2113  (best=0.2113)  epoch_time=0h01m25s, ETA=2h20m31s\n"
      ]
     }
    ],
@@ -466,8 +466,8 @@
     "#\t\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
     "\n",
-    "#train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
-    "#\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
+    "train_protonet(name=\"ProtoNet\", model=model_protonet18, optimizer=optim_protonet18, train_loader=protonet_train_loader, test_loader=protonet_test_loader,\n",
+    "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
     "\n",
     "train_model(name=\"FilmNet50_SGC\", model=model_filmnet50_sgc, optimizer=optim_filmnet50_sgc, train_loader=train_t_imagenet_loader, test_loader=val_t_imagenet_loader,\n",
     "\t\t\tcriterion=criterion, device=device, num_epochs=num_epochs)\n",
